Use judgments instead of training data

--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -141,11 +141,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genome_judgments.txt', \n",
-    "                                        trainingOutFile='data/genome_judgments_train.txt', \n",
-    "                                        featureSet='genome')"
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with open('data/genome_judgments.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='genome')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -165,9 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genome_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
     "                 index='tmdb',\n",
