--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -156,11 +156,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
-    "                                        featureSet='title')"
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with open('data/title_judgments.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='title')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -178,14 +186,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,7],\n",
+    "                                               features=[1,2,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -230,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -267,9 +275,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -316,23 +324,23 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from ltr.judgments import judgments_from_file\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    print(qid)\n",
+    "    if qid == 1: # Rambo\n",
+    "        model = eval_model(modelName='title',\n",
+    "                               features=features,\n",
+    "                               judgments=query_judgments)\n",
     "\n",
-    "\n",
-    "rambo = judgmentDict[1]\n",
-    "model = eval_model(modelName='title',\n",
-    "                       features=features,\n",
-    "                       judgments=rambo)\n",
-    "\n",
-    "print()\n",
-    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
-    "print()\n",
-    "print(model)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
@@ -630,11 +638,19 @@
     "\n",
     "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
-    "                                        featureSet='title2')"
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with open('data/title_judgments.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='title2')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -654,9 +670,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -711,9 +727,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -757,23 +773,22 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from ltr.judgments import judgments_from_file\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "with open('data/title2_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    if qid == 1:\n",
+    "        model = eval_model(modelName='title',\n",
+    "                           features=features,\n",
+    "                           judgments=query_judgments)\n",
     "\n",
-    "\n",
-    "rambo=judgmentDict[1]\n",
-    "model = eval_model(modelName='title2',\n",
-    "                       features=features,\n",
-    "                       judgments=rambo)\n",
-    "\n",
-    "print()\n",
-    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
-    "print()\n",
-    "print(model)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
