--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -129,11 +129,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments_binary.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_binary_train.txt', \n",
-    "                                        featureSet='title')"
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with open('data/title_judgments_binary.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='title')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -173,10 +181,8 @@
     "                transformed_features.append(features[i, :] - features[j, :])\n",
     "    return np.array(transformed_features), np.array(transformed_predictors)\n",
     "\n",
-    "def samples_from_training_data(fname):\n",
-    "    with open(fname) as f:\n",
-    "        judgs = judgments_from_file(f)\n",
-    "        features, predictors = judgments_to_nparray(judgs)\n",
+    "def samples_from_training_data(training_set):\n",
+    "    features, predictors = judgments_to_nparray(training_set)\n",
     "    \n",
     "    # Scale data\n",
     "    print(\"Scaling\")\n",
@@ -190,7 +196,7 @@
     "    features, predictors = pairwise_transform(features, predictors)\n",
     "    return features, predictors.ravel(), scaler\n",
     "\n",
-    "features, predictors, scaler = samples_from_training_data(fname='data/title_judgments_binary_train.txt')\n",
+    "features, predictors, scaler = samples_from_training_data(training_set)\n",
     "features"
    ]
   },
@@ -288,18 +294,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
   }
  },
  "nbformat": 4,
