--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -117,11 +117,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ltr.judgments import judgments_from_file\n",
     "from ltr import years_as_ratings\n",
     "years_as_ratings.synthesize(client, \n",
     "                            featureSet='release',\n",
     "                            classicTrainingSetOut='data/classic-training.txt',\n",
-    "                            latestTrainingSetOut='data/latest-training.txt')"
+    "                            latestTrainingSetOut='data/latest-training.txt')\n",
+    "\n",
+    "# Load into training set \n",
+    "classic_training_set = [j for j in judgments_from_file(open('data/classic-training.txt'))]\n",
+    "latest_training_set = [j for j in judgments_from_file(open('data/latest-training.txt'))]\n",
+    "\n",
+    "classic_training_set"
    ]
   },
   {
@@ -138,10 +145,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
-    "train(client=client, trainingInFile='data/latest-training.txt', \n",
+    "from ltr.ranklib import train\n",
+    "train(client=client, training_set=latest_training_set, \n",
     "      index='tmdb', featureSet='release', modelName='latest')\n",
-    "train(client=client, trainingInFile='data/classic-training.txt', \n",
+    "train(client=client, training_set=classic_training_set, \n",
     "      index='tmdb', featureSet='release', modelName='classic')"
    ]
   },
