All Solr notebooks pass

--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -785,7 +785,7 @@
     "                           judgments=query_judgments)\n",
     "\n",
     "        print()\n",
-    "        print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
     "        print()\n",
     "        print(model)\n",
     "        break"
