--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -156,11 +156,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                                        featureSet='genre')"
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with open('data/genre_by_date_judgments.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='genre')\n",
+    "        training_set.extend(query_training_set)\n"
    ]
   },
   {
@@ -178,9 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client, \n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
@@ -241,14 +248,22 @@
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
     "\n",
-    "judgments_to_training_set(client,\n",
-    "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                          featureSet='genre')\n",
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
     "\n",
-    "from ltr.train import train\n",
+    "training_set=[]\n",
+    "with open('data/genre_by_date_judgments.txt') as judgF:\n",
+    "    judgments=judgments_from_file(judgF)\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='genre')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        \n",
+    "        \n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
