Use judgments_open; convert ES notebooks

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -247,12 +247,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        index='blog',\n",
-    "                                        judgmentInFile='data/osc_judgments.txt', \n",
-    "                                        trainingOutFile='data/osc_judgments_train.txt', \n",
-    "                                        featureSet='test')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/osc_judgments.txt') as judgment_list:\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='blog', \n",
+    "                                                  judgments=query_judgments, feature_set='test')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -270,9 +276,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/osc_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='test',\n",
     "                 index='blog',\n",
@@ -303,6 +309,13 @@
     "search(client, \"beer\", modelName='test', \n",
     "       index='blog', fields=blog_fields)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
