--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -157,11 +157,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genome_judgments.txt', \n",
-    "                                        trainingOutFile='data/genome_judgments_train.txt', \n",
-    "                                        featureSet='genome')"
+    "from ltr.log import log_query\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/genome_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, \n",
+    "                                                  index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='genome')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -183,7 +190,7 @@
    "source": [
     "from ltr.train import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genome_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
     "                 index='tmdb',\n",
