--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -141,15 +141,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/genome_judgments.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
+    "with judgments_open('data/genome_judgments.txt') as judg_list:\n",
     "    # For each query's judgments log features, and add to our training set...\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
     "                                                  judgments=query_judgments, feature_set='genome')\n",
     "        training_set.extend(query_training_set)\n",
