--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -156,15 +156,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/title_judgments.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    # For each query's judgments log features, and add to our training set...\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
     "                                                  judgments=query_judgments, feature_set='title')\n",
     "        training_set.extend(query_training_set)\n",
@@ -324,7 +323,6 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file\n",
     "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
@@ -638,15 +636,14 @@
     "\n",
     "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/title_judgments.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
+    "with judgments_open('data/title_judgments.txt') as judg_list:\n",
     "    # For each query's judgments log features, and add to our training set...\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
     "                                                  judgments=query_judgments, feature_set='title2')\n",
     "        training_set.extend(query_training_set)\n",
@@ -773,7 +770,6 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file\n",
     "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
