--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -156,15 +156,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/genre_by_date_judgments.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
-    "    # For each query's judgments log features, and add to our training set...\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
     "                                                  judgments=query_judgments, feature_set='genre')\n",
     "        training_set.extend(query_training_set)\n"
@@ -242,7 +240,6 @@
    "outputs": [],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "from ltr.log import judgments_to_training_set\n",
     "\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
@@ -253,8 +250,7 @@
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/genre_by_date_judgments.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
     "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
     "                                                  judgments=query_judgments, feature_set='genre')\n",
@@ -274,7 +270,7 @@
     "for ftrId, impact in trainLog.impacts.items():\n",
     "    print(\"{} - {}\".format(ftrId, impact))\n",
     "    \n",
-    "print(\"Perfect NDCG! {}\".format(trainLog.rounds[-1]))"
+    "print(\"NDCG! {}\".format(trainLog.rounds[-1]))"
    ]
   },
   {
