--- a/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
+++ b/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
@@ -80,11 +80,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
-    "                                        featureSet='movies')"
+    "from ltr.log import log_query\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, \n",
+    "                                                  index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='movies')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
   },
   {
@@ -93,9 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  index='tmdb',\n",
     "                  featureSet='movies',\n",
     "                  modelName='title')"
