--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -185,11 +185,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_rf_judgments_train.txt', \n",
-    "                                        featureSet='title_rf')"
+    "from ltr.log import log_query\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, \n",
+    "                                                  index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='title_rf')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -207,9 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import kcv\n",
+    "from ltr.ranklib import kcv\n",
     "res  = kcv(client,\n",
-    "            trainingInFile='data/title_rf_judgments_train.txt',\n",
+    "            training_set=training_set,\n",
     "            metric2t='NDCG@10',\n",
     "            leafs=4,\n",
     "            trees=100,\n",
@@ -244,9 +251,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "res  = train(client,\n",
-    "             trainingInFile='data/title_rf_judgments_train.txt',\n",
+    "             training_set=training_set,\n",
     "             metric2t='NDCG@10',\n",
     "             leafs=4,\n",
     "             trees=100,\n",
