--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -173,11 +173,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
-    "                                        featureSet='title')"
+    "from ltr.log import log_query\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, \n",
+    "                                                  index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='title')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -195,9 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -246,9 +253,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -283,9 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -331,25 +338,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    print(qid)\n",
+    "    if qid == 1: # Rambo\n",
+    "        model = eval_model(modelName='title',\n",
+    "                               features=features,\n",
+    "                               judgments=query_judgments)\n",
     "\n",
-    "\n",
-    "rambo=judgmentDict[1]\n",
-    "model = eval_model(modelName='title',\n",
-    "                       features=features,\n",
-    "                       judgments=rambo)\n",
-    "\n",
-    "print()\n",
-    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
-    "print()\n",
-    "print(model)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
@@ -640,11 +645,18 @@
     "\n",
     "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
-    "                                        featureSet='title2')"
+    "from ltr.log import log_query\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, \n",
+    "                                                  index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='title2')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -653,9 +665,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -685,9 +697,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -730,192 +742,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.reset_ltr(index='tmdb')\n",
-    "\n",
-    "config = {\"validation\": {\n",
-    "              \"index\": \"tmdb\",\n",
-    "              \"params\": {\n",
-    "                  \"keywords\": \"rambo\"\n",
-    "              }\n",
-    "    \n",
-    "           },\n",
-    "           \"featureset\": {\n",
-    "            \"features\": [\n",
-    "            {\n",
-    "                \"name\": \"title_phrase\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"constant_score\": {\n",
-    "                        \"filter\": {\n",
-    "                            \"match_phrase\": {\"title\": \"{{keywords}}\"}\n",
-    "                        },\n",
-    "                        \"boost\": 1.0\n",
-    "                    }  \n",
-    "                }\n",
-    "            },\n",
-    " \n",
-    "            {\n",
-    "                \"name\": \"overview_bm25\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
-    "                }\n",
-    "            },\n",
-    "   \n",
-    "            {\n",
-    "                \"name\": \"title_fuzzy\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"title\": \n",
-    "                                {\"query\": \"{{keywords}}\",\n",
-    "                                 \"fuzziness\": \"AUTO\"}}\n",
-    "                }\n",
-    "            },\n",
-    "             {\n",
-    "                \"name\": \"release_year\",\n",
-    "                \"params\": [],\n",
-    "                \"template\": {\n",
-    "                    \"function_score\": {\n",
-    "                        \"field_value_factor\": {\n",
-    "                            \"field\": \"release_year\",\n",
-    "                            \"missing\": 2000\n",
-    "                        },\n",
-    "                        \"query\": { \"match_all\": {} }\n",
-    "                    }\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"coll_name_bm25\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"collection_name\": \n",
-    "                                {\"query\": \"{{keywords}}\"}}\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"title_fuzzy_2\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                       \"match\": {\"title.as_str\": \n",
-    "                                {\"query\": \"{{keywords}}\",\n",
-    "                                 \"fuzziness\": \"AUTO\"}}\n",
-    "                }\n",
-    "            }\n",
-    "            ]\n",
-    "    }}\n",
-    "\n",
-    "\n",
-    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
-    "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
-    "                                        featureSet='title2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.get_doc(index='tmdb', doc_id=1892)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.train import feature_search\n",
-    "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
-    "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=20,\n",
-    "                                               trees=20,\n",
-    "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5],\n",
-    "                                               featureSet='title2')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "trainLogs = rankLibResult.trainingLogs\n",
-    "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLogs[-1].rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Avg NDCG@10 when feature included:\")\n",
-    "for ftrId, ndcg in ndcgPerFeature.items():\n",
-    "    print(\"%s => %s\" % (ftrId, ndcg))\n",
-    "    \n",
-    "print(\"Avg K-Fold NDCG@10 %s\" % rankLibResult.kcvTestAvg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr import train\n",
-    "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
-    "                  metric2t='NDCG@10',\n",
-    "                  leafs=20,\n",
-    "                  trees=20,\n",
-    "                  index='tmdb',\n",
-    "                  featureSet='title2',\n",
-    "                  modelName='title2')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLog.rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.client import ElasticClient\n",
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    print(qid)\n",
+    "    if qid == 1: # Rambo\n",
+    "        model = eval_model(modelName='title',\n",
+    "                               features=features,\n",
+    "                               judgments=query_judgments)\n",
     "\n",
-    "for qid, judgments in judgmentDict.items():\n",
-    "\n",
-    "    model = eval_model(modelName='title2',\n",
-    "                           features=features,\n",
-    "                           judgments=judgments)\n",
-    "\n",
-    "    print()\n",
-    "    print(\"## Evaluating graded docs for search keywords '%s'\" % judgments[0].keywords)\n",
-    "    print()\n",
-    "    print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.get_doc(index='tmdb', doc_id=860)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
