--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -82,11 +82,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/sandbox_judgments_train.txt', \n",
-    "                                        featureSet='sandbox')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/title_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='sandbox')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -107,10 +112,10 @@
     "  Experiment with the leafs and trees variables, how do they affect NGCG?\n",
     "  Does a high leaf value increase your NDCG?  What could be the potential downfalls?\n",
     "'''\n",
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
     "                  index='tmdb',\n",
-    "                  trainingInFile='data/sandbox_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
