--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -182,11 +182,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                                        featureSet='genre')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import log_query\n",
+    "from itertools import groupby\n",
+    "\n",
+    "training_set=[]\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, feature_set='genre')\n",
+    "        training_set.extend(query_training_set)"
    ]
   },
   {
@@ -204,9 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
@@ -266,14 +271,19 @@
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
     "\n",
-    "judgments_to_training_set(client,\n",
-    "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                          featureSet='genre')\n",
-    "\n",
-    "from ltr.train import train\n",
+    "training_set=[]\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='genre')\n",
+    "        training_set.extend(query_training_set)\n",
+    "        print(len(training_set))\n",
+    "        \n",
+    "        \n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
