--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -21,9 +21,7 @@
    "outputs": [],
    "source": [
     "from ltr.client import SolrClient\n",
-    "client = SolrClient()\n",
-    "\n",
-    "import numpy as np"
+    "client = SolrClient()"
    ]
   },
   {
@@ -129,17 +127,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/title_judgments_binary.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
+    "with judgments_open('data/title_judgments_binary.txt') as judg_list:\n",
     "    # For each query's judgments log features, and add to our training set...\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='title')\n",
+    "                                                  judgments=query_judgments,\n",
+    "                                                  feature_set='title')\n",
     "        training_set.extend(query_training_set)\n",
     "        print(\"Got %s Training Samples\" % len(training_set))"
    ]
@@ -151,7 +149,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from ltr.judgments import judgments_from_file, judgments_to_nparray\n",
+    "from ltr.judgments import judgments_to_nparray\n",
     "\n",
     "def pairwise_transform(features, predictors):\n",
     "    \"\"\" Informed by\n",
@@ -294,6 +292,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
