--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
     "                 training_set=training_set,\n",
     "                 metric2t='NDCG@10',\n",
