--- a/notebooks/solr/tmdb/svmrank.ipynb
+++ b/notebooks/solr/tmdb/svmrank.ipynb
@@ -122,19 +122,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.judgments import judgments_open\n",
     "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
     "training_set=[]\n",
-    "with open('data/title_judgments_binary.txt') as judgF:\n",
-    "    judgments=judgments_from_file(judgF)\n",
-    "    # For each query's judgments log features, and add to our training set...\n",
+    "with judgments_open('data/title_judgments_binary.txt') as judgments:\n",
     "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
     "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='title')\n",
+    "                                                  judgments=query_judgments, \n",
+    "                                                  feature_set='title')\n",
     "        training_set.extend(query_training_set)\n",
-    "        print(\"Got %s Training Samples\" % len(training_set))"
+    "\n",
+    "training_set"
    ]
   },
   {
